# anri_example

./: .gitignore  readme.md
api/: Dockerfile  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 4a3d72880644_auth.py  6c5ab688b7ba_init.py  d86d63d430a3_initial.py
api/src/: adminsite.py  config.py  database.py  main.py  models.py
api/src/auth/: base_config.py  manager.py  models.py
client/: Dockerfile  package-lock.json
client/public/: index.html
client/src/: App.vue  main.js
client/src/assets/css/: style.css
client/src/components/: Footer.vue  Navbar.vue  ProductCard.vue  ProductList.vue
client/src/views/: HomeView.vue
docker/: docker-compose.yaml
