[tool.poetry]
name = "anridecor"
version = "0.1.0"
description = ""
authors = ["132dannys <Danlucky2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
fastapi-amis-admin = "^0.6.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.1"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
